--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,69 @@
-/*Controlador css del proyecto L2 Eragon H5*/
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+    /** Reset para REMS  - 62.5% = 10px de 16 px **/
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.6rem;
+    line-height: 2;
+}
+
+/** Variables **/
+:root {
+    --prin: #17161A;
+    --secu: #FF0E1F;
+  }
+
+
+/** Globales **/
+
+img {
+    max-width: 100%;
+}
+
+.contenedor {
+    max-width: 120rem;
+    width: 95%;
+    /** 1200px **/
+    margin: 0 auto;
+}
+
+h2{
+    font-weight: 800;
+    font-size: 5rem;
+}
+
+/** Header **/
+header{
+    background-color: var(--prin);
+    align-items: center;
+}
+
+.menu{
+    height: 8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu .logo{
+
+}
+
+.navegacion ul li a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.6rem;
+    font-weight: 400;
+    padding: 2.5rem;
+    text-transform: uppercase;
+    line-height: 2rem;
+}
