--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6rem;
     line-height: 2;
+    background-color: var(--prin);
 }
 
 /** Variables **/
@@ -36,34 +37,290 @@ img {
     margin: 0 auto;
 }
 
+.contenedor-menu{
+    max-width: 90%;
+    margin: 0 auto;
+}
+
 h2{
     font-weight: 800;
     font-size: 5rem;
+    margin: 0;
+    padding: 5rem 0;
+    color: #ffffff;
+    text-transform: uppercase;
 }
+
+h3{
+    font-weight: 800;
+    font-size: 3.5rem;
+    margin: 0;
+    color: #ffffff;
+    text-transform: uppercase;
+    line-height: 1;
+}
+
+h2 span{
+    color: var(--secu);
+}
+
+/** Utilidad **/
+.centrar-texto{
+    text-align: center;
+}
+
+.btn{
+    font-weight: 800;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    background-color: var(--secu);
+    color: #ffffff;
+    align-items: center;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color .2s ease-in-out;
+    border: none;
+}
+
+.btn:hover{
+    background-color: #8d0f17;
+}
+
+
 
 /** Header **/
 header{
     background-color: var(--prin);
-    align-items: center;
 }
 
 .menu{
-    height: 8rem;
+    height: 10rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.menu .logo{
-
+.logo{
+    justify-content: flex-start;
 }
 
-.navegacion ul li a{
+.logo a img{
+    display: block;
+    align-items: center;
+}
+
+@media (min-width: 1360px){
+    .navegacion{
+        margin-left: 30rem;
+    }
+}
+@media (min-width: 1440px){
+    .navegacion{
+        margin-left: 40rem;
+    }
+}
+
+@media (min-width: 1600px){
+    .navegacion{
+        margin-left: 50rem;
+    }
+}
+
+@media (min-width: 1900px){
+    .navegacion{
+        margin-left: 80rem;
+    }
+}
+
+
+.navegacion li{
+    list-style: none;
+}
+
+.navegacion li a{
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
     text-decoration: none;
     color: #ffffff;
-    font-size: 1.6rem;
     font-weight: 400;
-    padding: 2.5rem;
-    text-transform: uppercase;
-    line-height: 2rem;
+    font-size: 1.6rem;
+    padding: 0 3rem;
+    line-height: 10rem;
+    box-sizing: border-box;
+}
+
+.cool-link::after{
+    content: '';
+    bottom: 0;
+    left: 0;
+    height: .5rem;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    background-color: var(--secu);
+    opacity: 0;
+    transition: opacity .3s cubic-bezier(.645,.045,.355,1);
+    transform: skewX(15deg);
+    position: absolute;
+}
+
+.cool-link:hover::after{
+    opacity: 1.0;
+}
+
+.buscar{
+    width: 8rem;
+}
+.buscar img{
+    display: block;
+    margin: 0 auto;
+}
+
+.config{
+    width: 8rem;
+}
+
+.config img{
+    display: block;
+    margin: 0 auto;
+    transition: .4s ease-in-out;
+}
+
+.config img:hover{
+    transform: rotate(45deg);
+}
+
+/** Main **/
+.main-registro{
+    background-image: url(../img/registro-bg.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg-color{
+    background: rgba(23, 22, 26, 0.65);
+    max-height: 100%;
+}
+
+.contenido-registro{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 8rem;
+}
+
+.info-registro{
+    flex: 0 0 calc(50% - 2rem);
+    color: #ffffff;
+}
+
+.form-acc{
+    flex: 0 0 calc(50% - 2rem);
+}
+
+.form-acc form input:not([type="submit"]){
+    width: 100%;
+    height: 5rem;
+    background-color: #2C2A2D;
+    color: #ffffff;
+    border: none;
+    margin: .5rem 0;
+    padding: 2rem;
+}
+
+.form-acc form input[type="submit"]{
+    width: 100%;
+    height: 5rem;
+}
+
+.form-acc form input:focus{
+    outline: none;
+}
+
+.follow{
+    display: flex;
+    align-items: center;
+}
+
+.follow .social{
+margin-left: 1.2rem;
+}
+
+.follow .social img{
+    padding: 0 .7rem;
+}
+
+/** Footer **/
+
+footer{
+    background-image: url(../img/NoiseTexture.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: var(--prin);
+}
+
+.bg-color-footer{
+    background: rgba(23, 22, 26, 0.50);
+    max-height: 100%;
+    position: relative;
+}
+
+.navegacion-footer{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.navegacion-footer li{
+    list-style: none;
+}
+
+.navegacion-footer li a{
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 400;
+    font-size: 1.6rem;
+    padding: 0 3rem;
+    line-height: 10rem;
+    box-sizing: border-box;
+    margin-bottom: -0.5rem;
+}
+
+.footer-line{
+    border-bottom: .5rem solid black;
+}
+
+div .social-footer{
+    padding: 3rem;
+    text-align: center;
+}
+
+div .social-footer::after{
+    content: '';
+    display: block;
+    height: .1rem;
+    width: 60rem;
+    background-color: #333234;
+    margin: 2rem auto 0 auto;
+}
+
+div .social-footer img{
+    margin: 0 1rem;
+}
+
+div .copy p{
+    color: #ffffff;
+    text-align: center;
+    padding-bottom: 2rem;
+    margin: 0;
+}
+
+div .copy a{
+    text-decoration: none;
+    color: #ffffff;
 }
